# pyndoc

./: .gitignore  README.md  out.md  pyproject.toml  setup.py  test.md  testing.py
docs/: docs.md  markdown.md  maths.md
docs/examples/: atomic.py  functions_example.html  functions_example.md  math_example.html  math_example.md  packages.tex
src/: setup.py
src/pyndoc/: __main__.py  filter.py  formats.py  latex.bak.py  latex.py  markdown.py  preprocess.py  server.py  server_utils.py
